# codex

./: .gitignore  README.md  app.py  build.py  extract_pyinstaller.py  inspect_bytecode.py  portable_motor_gui.py  pyproject.toml  recover_skeleton.py  recover_with_codex.py  requirements.txt
.github/workflows/: build.yml
src/netsphere_bridge/: __init__.py  __main__.py  app.py  browser.py  cert_manager.py  cli.py  config.py  detector.py  entry_point.py  proxy.py  qt_browser.py  qt_subprocess.py  ssh_tunnel.py  utils.py  webview_browser.py  webview_subprocess.py
