[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netsphere-bridge"
version = "2.0.0"
description = "Proxy bridge multiplataforma para acceder a paneles de administración de equipos de red."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jair Elizondo"},
]
keywords = ["proxy", "ssh", "network", "ubiquiti", "modem", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking",
]
dependencies = [
    "paramiko>=3.0",
    "psutil>=5.9",
    "requests>=2.28",
    "aiohttp>=3.8",
    "cryptography>=40",
    "urllib3>=2.0",
    "pywebview>=5.0",
    "PySide6>=6.0",
    "qtpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
netsphere-bridge = "netsphere_bridge.__main__:main"

[project.gui-scripts]
netsphere-bridge-gui = "netsphere_bridge.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
